# pySeqAlign

./: .gitignore  .python-version  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
docs/presentation/: README.md  pyseqalign_overview.tex
examples/: README.md  _data.py  balloon_logo.py  basic_alignment.py  learning_rules.py  pairwise_matching.py  scop_logos.py
examples/data/: README.md  balloon.tsv
examples/data/scop/: fold_001_002.xml  fold_002_001.xml  fold_002_032.xml  fold_003_001.xml  fold_003_002.xml
src/pyaligner/: __init__.py
src/pyaligner/core/: __init__.py  needleman_wunsch.py  smith_waterman.py
src/pyaligner/learning/: __init__.py  aleph.py  base.py  popper.py  task_builder.py
src/pyaligner/prolog/: __init__.py  engine.py
src/pyaligner/prolog/knowledge/: distances.pl
src/pyaligner/scoring/: __init__.py  distance.py
src/pyaligner/utils/: __init__.py  helpers.py
src/pyseqalign/: __init__.py  accel.py
src/pyseqalign/core/: __init__.py  alignment.py  needleman_wunsch.py  nw_affine.py  smith_waterman.py
src/pyseqalign/cpp/: build_cpp_aligner.sh  cpp_aligner.cpp
src/pyseqalign/learning/: __init__.py  aleph.py  base.py  popper.py  task_builder.py
src/pyseqalign/learning/aleph_files/: aleph_swi_ak.pl
src/pyseqalign/logo/: __init__.py  probability.py  profile.py  render.py
src/pyseqalign/msa/: __init__.py  consensus.py  distance_matrix.py  guide_tree.py  progressive.py
src/pyseqalign/prolog/: __init__.py  engine.py
src/pyseqalign/prolog/knowledge/: amino_acids.pl  blosum50.pl  defaults.pl
src/pyseqalign/scoring/: __init__.py  matrices.py  protocols.py
src/pyseqalign/utils/: __init__.py  helpers.py
tests/: test_learning.py  test_msa_logo.py  test_needleman_wunsch.py  test_scoring.py  test_smith_waterman.py  test_utils.py
