[build-system]
# pybind11 is a build-time dep so the OPTIONAL C++ aligner can be compiled at
# install time (best-effort; see setup.py). It is not a runtime dependency.
requires = ["setuptools>=68.0", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
# PyPI distribution name (the import package is `pyseqalign`; the name
# `pyseqalign` was blocked by PyPI's similarity guard vs. an existing project).
name = "pyseqalignment"
version = "0.1.3"
description = "pySeqAlign -- sequence alignment with Prolog-style distance functions and ILP learning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Andreas Karwath", email = "a.karwath@bham.ac.uk" },
]
keywords = ["sequence-alignment", "prolog", "smith-waterman", "needleman-wunsch", "bioinformatics", "ilp", "inductive-logic-programming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
prolog = [
    "janus_swi>=1.5",
]
# NOTE: the maintained Popper ILP system is not published on PyPI, so it
# cannot be declared as a dependency here (PyPI forbids direct-URL deps).
# These extras install Popper's solver (clingo); install Popper itself with:
#   pip install git+https://github.com/logic-and-learning-lab/Popper@main
# See the README "ILP Backends" section.
popper = [
    "clingo>=5.6",
]
learning = [
    "janus_swi>=1.5",
    "clingo>=5.6",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/athro/pySeqAlign"
Repository = "https://github.com/athro/pySeqAlign"
Issues = "https://github.com/athro/pySeqAlign/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pyseqalign.prolog.knowledge" = ["*.pl"]
"pyseqalign.learning.aleph_files" = ["*.pl"]
"pyseqalign.scoring.matrix_data" = ["*"]
"pyseqalign" = ["cpp/*.cpp", "cpp/*.sh"]   # optional C++ aligner source (build manually)

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
